test/cases/compile_errors/invalid_underscore_placement_in_float_literal-9.zig
fn main() void {
    var bad: f128 = 1__0.0e-1;
    _ = bad;
}

// error
//
// :2:23: error: repeated digit separator
